@@ -1,6 +1,7 @@
 package com.example.orderservice.kafka;
 
-import com.example.orderservice.dto.*;
+import com.example.orderservice.dto.KafkaOrderDto;
+import com.example.orderservice.dto.OrderDto;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
@@ -8,7 +9,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -16,15 +16,18 @@ import java.util.List;
 public class OrderProducerService {
     private KafkaTemplate<String, String> kafkaTemplate;
 
-    List<Field> fields = Arrays.asList(new Field("string", true, "order_id"),
-            new Field("string", true, "user_id"),
-            new Field("string", true, "product_id"),
-            new Field("int32", true, "qty"),
-            new Field("int32", true, "total_price"),
-            new Field("int32", true, "unit_price"));
-    Schema schema = Schema.builder()
+    private static final List<KafkaOrderDto.Field> FIELDS = List.of(
+            new KafkaOrderDto.Field("string", true, "order_id"),
+            new KafkaOrderDto.Field("string", true, "user_id"),
+            new KafkaOrderDto.Field("string", true, "product_id"),
+            new KafkaOrderDto.Field("int32", true, "qty"),
+            new KafkaOrderDto.Field("int32", true, "total_price"),
+            new KafkaOrderDto.Field("int32", true, "unit_price")
+    );
+
+    private static final KafkaOrderDto.Schema SCHEMA = KafkaOrderDto.Schema.builder()
             .type("struct")
-            .fields(fields)
+            .fields(FIELDS)
             .optional(false)
             .name("orders")
             .build();
@@ -39,7 +42,7 @@ public class OrderProducerService {
         String jsonInString = "";
         try {
             jsonInString = mapper.writeValueAsString(orderDto);
-        } catch(JsonProcessingException ex) {
+        } catch (JsonProcessingException ex) {
             ex.printStackTrace();
         }
 
@@ -49,23 +52,23 @@ public class OrderProducerService {
         return orderDto;
     }
 
-    public OrderDto send4SinkConnect(String topic, OrderDto orderDto) {
-        Payload payload = Payload.builder()
-                .order_id(orderDto.getOrderId())
-                .user_id(orderDto.getUserId())
-                .product_id(orderDto.getProductId())
-                .qty(orderDto.getQty())
-                .total_price(orderDto.getTotalPrice())
-                .unit_price(orderDto.getUnitPrice())
-                .build();
+    public OrderDto sendForSinkConnect(String topic, OrderDto orderDto) {
+        KafkaOrderDto.Payload.PayloadBuilder builder = KafkaOrderDto.Payload.builder();
+        builder.order_id(orderDto.getOrderId());
+        builder.user_id(orderDto.getUserId());
+        builder.product_id(orderDto.getProductId());
+        builder.qty(orderDto.getQty());
+        builder.unit_price(orderDto.getUnitPrice());
+        builder.total_price(orderDto.getTotalPrice());
+        KafkaOrderDto.Payload payload = builder.build();
 
-        KafkaOrderDto kafkaOrderDto = new KafkaOrderDto(schema, payload);
+        KafkaOrderDto kafkaOrderDto = new KafkaOrderDto(SCHEMA, payload);
 
         ObjectMapper mapper = new ObjectMapper();
         String jsonInString = "";
         try {
             jsonInString = mapper.writeValueAsString(kafkaOrderDto);
-        } catch(JsonProcessingException ex) {
+        } catch (JsonProcessingException ex) {
             ex.printStackTrace();
         }
 
